--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
                 <nav>
                     <ul class="subpag">
                         <li><a class="nav" href="index.html">Home</a></li>
-                        <li><a href="producto.html">Producto</a></li>
-                        <li><a href="category.html">Category</a></li>
+                        <li><a href="category.html">Accesorios</a></li>
+                        <li><a href="category.html">Ropa Hombre</a></li>
+                        <li><a href="category.html">Ropa Mujer</a></li>
                         <li><a href="cart.html">Carrito</a></li>
                         <li><a href="login.html">Log In</a></li>
                         <li><a href="register.html">Registro</a></li>
-
-
                     </ul>
                 </nav>
                 
