Formulario login y correcion de imagenes

--- a/login.html
+++ b/login.html
@@ -6,6 +6,15 @@
     <title>login</title>
 </head>
 <body>
-    
-</body>
+    <form action="" method="">
+        <div>
+            <label>direccion de correo electronico:</label>
+            <input type="email" name="emailUsuario" placeholder="ej.prograti@gmail.com" required>
+        </div>
+            <label>contraseña:</label>
+            <input type="password" name="passwordUsuario" required>
+        <div>
+            <button type="submit">enviar</button>
+        </div>
+    </form>
 </html>
