--- a/productDetail.html
+++ b/productDetail.html
@@ -39,7 +39,7 @@
     <p>talles: xs, s, m, l, xl</p>
 
     <h2>gorra hombre</h2>
-    <img src="./img/gorra hombre.jpeg">
+    <img src="./img/accesorio.jpeg">
     <h3>detalle del producto:</h3>
     <p>color: gris</p>
     <p>talle: unico</p>
