Inicio estructura css de login y product detail

--- a/login.html
+++ b/login.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+    <href class="login">
+    <h1>cultura oceanica</h1>
     <form action="" method="">
         <div>
             <label>direccion de correo electronico:</label>
             <input type="email" name="emailUsuario" placeholder="ej.prograti@gmail.com" required>
         </div>
-            <label>contraseña:</label>
+            <label >contraseña:</label>
             <input type="password" name="passwordUsuario" required>
         <div>
             <button type="submit">enviar</button>
         </div>
+    </href>
     </form>
 </html>
