--- a/productDetail.html
+++ b/productDetail.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle producto</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+<href class="productos">
+    <h1>cultura Oceanica</h1>
     <h2>buzo mujer</h2>
     <img src="./img/buzo mujer.jpeg">
     <h3>detalle del producto:</h3>
@@ -43,6 +46,7 @@
     <h3>detalle del producto:</h3>
     <p>color: gris</p>
     <p>talle: unico</p>
+</href>
 
 </body>
 </html>
