--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
     <h1>Shopping Cart</h1>
     <img class="carrito" src="img/Shopping Cart.jpg" alt="carrito de compras">
     <section class="compras">
-        <div class="productos">
+        <div class="productos2">
             <div class="infoproducto">
                     <img class="imgprod" src="./img/buzo mujer.jpeg" alt="Buzo de mujer">
                     <p>Buzo de Lana para mujer</p>
