arreglos de nombres y header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="home-sections">
         <article class="buzo">
             <h3 class="titulo-producto">Buzo</h3>
-            <img src="./img/buzo mujer.jpeg" alt="Buzo de mujer">
+            <img src="./img/buzo-mujer.jpeg" alt="Buzo de mujer">
             <p>Buzo de lana para mujer</p>
             <p>$1000</p>
             <a href="./cart.html">
@@ -48,7 +48,7 @@
             
         <article class="pollera">
             <h3 class="titulo-producto">Pollera</h3>
-            <img src="./img/pollera mujer.jpeg" alt="Pollera de mujer">
+            <img src="./img/pollera-mujer.jpeg" alt="Pollera de mujer">
             <p>Pollera de mujer super comoda</p>
             <p>$1111</p>
             <a href="./cart.html">
@@ -61,7 +61,7 @@
 
         <article class="pant">
             <h3 class="titulo-producto">Pantalon</h3>
-            <img src="./img/pant mujer.jpeg" alt="Pantalon de mujer">
+            <img src="./img/pant-mujer.jpeg" alt="Pantalon de mujer">
             <p>Pantalon para mujer super canchero</p>
             <p>$1200</p>
             <a href="./cart.html">
@@ -74,7 +74,7 @@
 
         <article class="sandalias">
             <h3 class="titulo-producto"> Sandalias </h3>
-            <img src="./img/sandalias mujer.jpeg" alt="Sandalias de mujer">
+            <img src="./img/sandalias-mujer.jpeg" alt="Sandalias de mujer">
             <p>Sandalias para mujer</p>
             <p>$1300</p>
             <a href="./cart.html">
@@ -86,7 +86,7 @@
             
         <article class="top">
             <h3 class="titulo-producto">Top</h3>
-            <img src="./img/top mujer.jpeg" alt="Top de mujer">
+            <img src="./img/top-mujer.jpeg" alt="Top de mujer">
             <p>Top mangas largas para mujer</p>
             <p>$1400</p>
             <a href="./cart.html">
@@ -100,7 +100,7 @@
     <section class="home-sections">
         <article class="camisa">
             <h3 class="titulo-producto">Camisa</h3>
-            <img src="./img/camisa hombre.jpeg" alt="Camisa de hombre">
+            <img src="./img/camisa-hombre.jpeg" alt="Camisa de hombre">
             <p>Camisa para hombre</p>
             <p>$1500</p>
             <a href="./cart.html">
@@ -113,7 +113,7 @@
 
         <article class="campera-hombre">
             <h3 class="titulo-producto">Campera</h3>
-            <img src="./img/campera hombre.jpeg" alt="Campera de hombre">
+            <img src="./img/campera-hombre.jpeg" alt="Campera de hombre">
             <p>Campera para hombre</p>
             <p>$1890</p>
             <a href="./cart.html">
@@ -126,7 +126,7 @@
 
         <article class="pant-hombre">
             <h3 class="titulo-producto">Pantalon</h3>
-            <img src="./img/Pant hombre.jpeg" alt="Pantalon de hombre">
+            <img src="./img/pant-hombre.jpeg" alt="Pantalon de hombre">
             <p>Pantalon para hombre</p>
             <p>$1400</p>
             <a href="./cart.html">
@@ -139,7 +139,7 @@
 
         <article class="buzo-hombre">
             <h3 class="titulo-producto">Buzo</h3>
-            <img src="./img/buzo hombre.jpeg" alt=" buzo de hombre">
+            <img src="./img/buzo-hombre.jpeg" alt=" buzo de hombre">
             <p>Buzo para hombre</p>
             <p>$1700</p>
             <a href="./cart.html">
@@ -152,7 +152,7 @@
 
         <article class="zapatillas">
             <h3 class="titulo-producto">Zapatillas</h3>
-            <img src="./img/zapatillas hombres.jpeg" alt="zapatillas de hombre">
+            <img src="./img/zapas-hombres.jpeg" alt="zapatillas de hombre">
             <p>zapatillas para hombre</p>
             <p>$2000</p>
             <a href="./cart.html">
@@ -168,7 +168,7 @@
     <section class="home-sections">
         <article class="Gorra">
             <h3 class="titulo-producto">Gorra</h3>
-            <img src="./img/gorra.jpeg" alt="gorra">
+            <img src="./img/gorra.jpeg alt="gorra">
             <p>Gorra unisex</p>
             <p>$799</p>
             <a href="./cart.html">
@@ -181,7 +181,7 @@
 
         <article class="reloj">
             <h3 class="titulo-producto">Reloj</h3>
-            <img src="./img/Reloj.jpeg" alt="reloj">
+            <img src="./img/reloj.jpeg" alt="reloj">
             <p>Reloj con malla color negra</p>
             <p>$2000</p>
             <a href="./cart.html">
@@ -194,7 +194,7 @@
 
         <article class="cartera">
             <h3 class="titulo-producto">Cartera</h3>
-            <img src="./img/accesorio cartera.jpeg" alt="Cartera de mujer">
+            <img src="./img/accesorio-cartera.jpeg" alt="Cartera de mujer">
             <p> Cartera de cuero para mujer</p>
             <p>$989</p>
             <a href="./cart.html">
@@ -207,7 +207,7 @@
 
         <article class="pulsera">
             <h3 class="titulo-producto">Pulsera</h3>
-            <img src="./img/pulsera accesorio.jpeg" alt="pulsera">
+            <img src="./img/pulsera-accesorio.jpeg" alt="pulsera">
             <p>Pulsera de cuero con dije</p>
             <p>$780</p>
             <a href="./cart.html">
@@ -220,7 +220,7 @@
 
         <article class="anteojos">
             <h3 class="titulo-producto">Anteojos</h3>
-            <img src="./img/anteojos accesorios.jpeg" alt="anteojos">
+            <img src="./img/anteojos-accesorios.jpeg" alt="anteojos">
             <p>Anteojos de forma rectangular con patitas reforzadas</p>
             <p>$659</p>
             <a href="./cart.html">
