--- a/productDetail.html
+++ b/productDetail.html
@@ -7,6 +7,20 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+    <header class="header">
+        <a href="index.html"><img src="./img/LOGO.png" alt="logo" class="logo"></a>
+        <nav>
+            <ul class="subpag">
+                <li><a class="nav" href="index.html">Home</a></li>
+                <li><a href="category.html">Accesorios</a></li>
+                <li><a href="category.html">Ropa Hombre</a></li>
+                <li><a href="category.html">Ropa Mujer</a></li>
+                <li><a href="cart.html">Carrito</a></li>
+                <li><a href="login.html">Log In</a></li>
+                <li><a href="register.html">Registro</a></li>
+            </ul>
+        </nav>
+
 <href class="productos">
     <h1>cultura Oceanica</h1>
     <h2>buzo mujer</h2>
