--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="articulos-padre">
     <h2 class="product-mujer">Ropa de Mujer</h2>
     <section class="home-sections">
-        <article class="producto">
+        <article class="producto"></article>
             <h3 class="titulo-producto">Buzo</h3>
             <img src="./img/buzo-mujer.jpeg" alt="Buzo de mujer">
             <p>Buzo de lana para mujer</p>
