arreglos en el cart html

--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@
                 <li><a href="register.html">Registro</a></li>
             </ul>
         </nav> 
-        
+    </header>
     <h1>Shopping Cart</h1>
     <img class="carrito" src="img/Shopping Cart.jpg" alt="carrito de compras">
     <section class="compras">
