mismos arreglos del header pero en recover html

--- a/recover.html
+++ b/recover.html
@@ -20,6 +20,7 @@
                 <li><a href="register.html">Registro</a></li>
             </ul>
         </nav> 
+    </header>
     <h1 class="titulo-pass">Recuperar Contraseña</h1>
     
     <section class="pass">
