estructura register y modificaciones en login.html y en css

--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
     
 <body>
     <header class="header">
-        <a href="index.html"><img src="./img/LOGO.png" alt="logo" class="logo"></a>
+        <a href="index.html"><img src="./img/logo.png" alt="logo" class="logo"></a>
         <nav>
             <ul class="subpag">
                 <li><a class="nav" href="index.html">Home</a></li>
