--- a/register.html
+++ b/register.html
@@ -21,5 +21,29 @@
                 <li><a href="register.html">Registro</a></li>
             </ul>
         </nav>
+    </header>
+
+        <href class="register">
+            <h1>cultura oceanica</h1>
+            <form action="" method="">
+                <div>
+                    <label>direccion de correo electronico:</label>
+                    <input type="email" name="emailUsuario" placeholder="ej.prograti@gmail.com" required>
+                </div>
+                    <label >contraseña:</label>
+                    <input type="password" name="passwordUsuario" required><br>
+                    <label >repetir contraseña:</label>
+                    <input type="password" name="passwordUsuario" required><br>
+
+                <input type="checkbox" name="terminosycondiciones">
+                <label for="checkbox">terminos y condiciones</label> 
+
+                <div>
+                    <button type="submit">registrarme</button>
+                </div>
+                <div>
+                    <button type="button"><a href="login.html">ya tengo cuenta</a></button>
+                </div>
+            </href>
 </body>
 </html>
