--- a/login.html
+++ b/login.html
@@ -32,7 +32,10 @@
             <label >contraseña:</label>
             <input type="password" name="passwordUsuario" required>
         <div>
-            <button type="submit">enviar</button>
+            <button type="submit">ingresar</button>
+        </div>
+        <div>
+            <button type="button"><a href="register.html">no tengo cuenta</a></button>
         </div>
     </href>
     </form>
