arreglos en las estructuras de los html y los estilos

--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
     <section class="home-sections">
         <article class="producto"></article>
             <h3 class="titulo-producto">Buzo</h3>
-            <img src="./img/buzo-mujer.jpeg" alt="Buzo de mujer">
+            <img src="./img/buzo-mujer-final.png" alt="Buzo de mujer">
             <p>Buzo de lana para mujer</p>
             <p>$1000</p>
             <a href="./cart.html">
                 <button type="submit"> Agregar al Carrito</button>
+            </a>
+            <a href="./producto-final.html">
+                <button type="submit"> Ver mas</button>
             </a>
             <a href="./productDetail.html"></a>
             </article>
@@ -70,6 +73,7 @@
             <a href="./cart.html">
                 <button type="submit"> Agregar al Carrito</button>
             </a>
+        
             <a href="./productDetail.html">
                 <button type="submit"> Ver mas</button>
             </a>
