--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 
     </header>
     <href class="login">
-    <h1>cultura oceanica</h1>
+    <h1>log in</h1>
     <form action="" method="">
         <div>
             <label>direccion de correo electronico:</label>
@@ -37,6 +37,21 @@
         <div>
             <button type="button"><a href="register.html">no tengo cuenta</a></button>
         </div>
+        <div>
+            <button type="button"><a href="recover.html">recuperar contraseña</a></button>
+        </div>
     </href>
     </form>
+
+    <footer>
+        <nav class="footer">
+            <ul class="footnom">
+                <li> Matias Royann </li>
+                <li>Guadalupe Ingolotti</li>
+                <li>Pilar Antunez</li>
+        </nav>
+    </footer>
+
+</html>
+
 </html>
