--- a/producto-final.html
+++ b/producto-final.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recuperar Contraseña</title>
+    <title>Detalle producto</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -19,29 +19,20 @@
                 <li><a href="login.html">Log In</a></li>
                 <li><a href="register.html">Registro</a></li>
             </ul>
-        </nav> 
+        </nav>
     </header>
-    <h1>Recuperar Contraseña</h1>
-    
-    <section class="pass">
-        <form action="" class="form-pass">
-            <div class="email-pass"> 
-                <label for="email">Email:</label>
-                <input class="email" type="email"  value="" placeholder="Ingrese su Email">
-            </div>
-            <div class="email-recuperar">
-             <button>Recuperar</button>
-            </div>
-            <div class="check-pass">
-                <br>
-                <input type="checkbox" name="contraseña" value="" >
-                <label for="checkbox"> Quiero recuperar mi contraseña</label> 
-            </div>
-        </form>
-    </section>
-    
+<main>
+    <h3>buzo bakery shop</h3>
+    <img src="./img/buzo-mujer-final.png" class="buzo-detail">
+    <img src="./img/buzo-mujer-final-dos.png" class="buzo-detail">
+    <p>buzo de tela importada de italia</p>
+    <p>talle unico</p>
+    <h3>precio: $100.000</h3>
 
-    <div>
+
+</main>
+
+<div>
         <footer>
             <nav class="footer">
                 <ul class="footnom">
@@ -50,6 +41,4 @@
                     <li>Pilar Antunez</li>
             </nav>
         </footer>
-    </div>
-
-</html>
+</div>
