--- a/producto.html
+++ b/producto.html
@@ -20,43 +20,42 @@
                 <li><a href="register.html">Registro</a></li>
             </ul>
         </nav>
+    </header>
 
-<href class="productos">
     <h1>cultura Oceanica</h1>
     <h2>buzo mujer</h2>
-    <img src="./img/buzo mujer.jpeg">
+    <img src="./img/buzo-mujer.jpeg">
     <h3>detalle del producto:</h3>
     <p>colores: blanco y negro</p>
     <p>talles: xs, s, m, l, xl</p>
 
     <h2>top mujer</h2>
-    <img src="./img/top mujer.jpeg">
+    <img src="./img/top-mujer.jpeg">
     <h3>detalle del producto: </h3>
     <p>color: negro</p>
     <p>talles: xs, s, m, l, xl</p>
 
     <h2>pollera mujer</h2>
-    <img src="./img/pollera mujer.jpeg">
+    <img src="./img/pollera-mujer.jpeg">
     <h3>detalle del producto:</h3>
     <p>color: jean</p>
     <p>talles: xs, s, m, l, xl</p>
 
     <h2>sandalias mujer</h2>
-    <img src="./img/sandalias mujer.jpeg">
+    <img src="./img/sandalias-mujer.jpeg">
     <h3>detalle del producto:</h3>
     <p>color: beige</p>
     <p>talles: 38, 39, 40</p>
 
 
-
     <h2>campera hombre</h2>
-    <img src="./img/campera hombre.jpeg">
+    <img src="./img/campera-hombre.jpeg">
     <h3>detalle del producto:</h3>
     <p>color: verde y marron</p>
     <p>talles: xs, s, m, l, xl</p>
 
     <h2>gorra hombre</h2>
-    <img src="./img/accesorio.jpeg">
+    <img src="./img/gorra.jpeg">
     <h3>detalle del producto:</h3>
     <p>color: gris</p>
     <p>talle: unico</p>
