--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
     </header>
 
         <href class="register">
-            <h1>cultura oceanica</h1>
+            <h1>registrarme</h1>
             <form action="" method="">
                 <div>
                     <label>direccion de correo electronico:</label>
@@ -46,4 +46,17 @@
                 </div>
             </href>
 </body>
+
+
+<div>
+    <footer>
+        <nav class="footer">
+            <ul class="footnom">
+                <li> Matias Royann </li>
+                <li>Guadalupe Ingolotti</li>
+                <li>Pilar Antunez</li>
+        </nav>
+    </footer>
+</div>
+
 </html>
