detalles cart html

--- a/cart.html
+++ b/cart.html
@@ -44,7 +44,7 @@
            
             <div class="infoproducto2">
                 <img class="imgprod2" src="img/campera-hombre.jpeg" alt="Campera de hombre">
-                <p>Campera de Hombre</p>
+                <p>Product info: Campera de Hombre</p>
                 <p>Precio: </p>
                 <a class="eliminar-button" href="">Eliminar</a>
                 <p><input type="number" value="1"> </p>
@@ -53,7 +53,7 @@
             
             <div class="infoproducto3">
                 <img class="imgprod3" src="img/pant-mujer.jpeg" alt="Pant Mujer">
-                <p>Pant Mujer</p>
+                <p>Product Info: Pant Mujer</p>
                 <p>Precio: </p>
                 <a class="eliminar-button" href="">Eliminar</a>
                 <p><input type="number" value="1"> </p>
