arreglos del index y header

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="./cart.html">
                     <button type="submit"> Agregar al Carrito</button>
                 </a>
-                <a href="./producto-final.html">
+                <a href="./producto.html">
                     <button type="submit"> Ver mas</button>
                 </a>
                 <a href="./productDetail.html"></a>
@@ -107,7 +107,7 @@
                 </a>
             </article>
 
-        
+        <section class="articulos-padre">
         <h2 class="h2">Ropa de Hombre</h2>
         <section class="home-sections">
             <article class="producto">
@@ -180,7 +180,7 @@
             </article>
 
 
-
+        <section class="articulos-padre">
         <h2 class="h2">Accesorios</h2>
         <section class="home-sections">
             <article class="producto">
