--- a/recover.html
+++ b/recover.html
@@ -31,8 +31,9 @@
                 
             </header>
             </div>
-<main>
+<main class="pass-main">
     <h1>Recuperar Contraseña</h1>
+    <br>
     
     <section class="pass">
         <form action="" class="form-pass">
@@ -41,6 +42,7 @@
                 <input class="email" type="email"  value="" placeholder="Ingrese su Email">
             </div>
             <div class="email-recuperar">
+                <br>
              <button>Recuperar</button>
             </div>
             <div class="check-pass">
