modificaciones de buttons y otros arreglos

--- a/login.html
+++ b/login.html
@@ -37,12 +37,12 @@
     <form action="" method="">
         <div>
             <label>direccion de correo electronico:</label>
-            <input type="email" name="emailUsuario" placeholder="ej.prograti@gmail.com" required>
+            <input type="email" name="emailUsuario" placeholder="ej.prograti@gmail.com" required class="email">
         </div>
             <label >contraseña:</label>
             <input type="password" name="passwordUsuario" required>
         <div>
-            <button type="submit">ingresar</button>
+            <button type="submit" class="ingresar">ingresar</button>
         </div>
         <div>
             <button type="button"><a href="register.html">no tengo cuenta</a></button>
