--- a/producto.html
+++ b/producto.html
@@ -33,14 +33,21 @@
             </div>
 
 <main>
-    
-    <h3>buzo bakery shop</h3>
-    <img src="./img/buzo-mujer-final.png" class="buzo-detail">
-    <img src="./img/buzo-mujer-final-dos.png" class="buzo-detail">
-    <p>buzo de tela importada de italia</p>
-    <p>talle unico</p>
-    <h3>precio: $100.000</h3>
 
+<section class="contenedor-producto1">
+
+        <img src="./img/buzo-mujer-final.png" class="buzo-detail">
+        <img src="./img/buzo-mujer-final-dos.png" class="buzo-detail">
+   
+    <div class="contendor-producto2">
+        <h3 class="buzo-bakery">buzo bakery shop</h3>
+        <p class="buzo-bakery">buzo de tela importada de italia</p>
+        <p class="buzo-bakery">talle unico</p>
+        <h3 class="buzo-bakery">precio: $100.000</h3>
+
+    </div>  
+
+</section>
 
 </main>
 
