--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
             <form action="" method="">
                 <div>
                     <label>direccion de correo electronico:</label>
-                    <input type="email" name="emailUsuario" placeholder="ej.prograti@gmail.com" required>
+                    <input type="email" name="emailUsuario" placeholder="ej.prograti@gmail.com" required class="email">
                 </div>
                     <label >contraseña:</label>
                     <input type="password" name="passwordUsuario" required><br>
@@ -49,7 +49,7 @@
                 <label for="checkbox">terminos y condiciones</label> 
 
                 <div>
-                    <button type="submit">registrarme</button>
+                    <button type="submit" class="ingresar">registrarme</button>
                 </div>
                 <div>
                     <button type="button"><a href="login.html">ya tengo cuenta</a></button>
