--- a/recover.html
+++ b/recover.html
@@ -41,14 +41,14 @@
                 <label for="email">Email:</label>
                 <input class="email" type="email"  value="" placeholder="Ingrese su Email">
             </div>
-            <div class="email-recuperar">
-                <br>
-             <button>Recuperar</button>
-            </div>
             <div class="check-pass">
                 <br>
                 <input type="checkbox" name="contraseña" value="" >
                 <label for="checkbox"> Quiero recuperar mi contraseña</label> 
+            </div>
+            <div class="email-recuperar">
+                <br>
+             <button class="ingresar">Recuperar</button>
             </div>
         </form>
     </section>
