borde a los  articulos de cart

--- a/cart.html
+++ b/cart.html
@@ -40,27 +40,29 @@
 
     <section class="compras">
         <div class="productos2">
-            <div class="infoproducto1">
-                <img class="imgprod1" src="img/buzo-mujer-final-dos.png" alt="Buzo de mujer">
-                <p>Product Info: Buzo de Tela importada de Italia</p>
+            <div class="infoproducto">
+                <img class="img" src="img/buzo-mujer-final-dos.png" alt="Buzo de mujer">
+                <p class="info">Product Info: Buzo de Tela importada de Italia</p>
                 <p>Precio: $1000</p>
                 <a class="eliminar-button" href="">Eliminar</a>
                 <p><input type="number" value="1"> </p>
 
             </div>
 
-            <div class="infoproducto2">
-                <img class="imgprod2" src="img/campera-hombre.jpeg" alt="Campera de hombre">
-                <p>Product info: Campera de Hombre</p>
+            <div class="infoproducto">
+                <img class="img" src="img/campera-hombre.jpeg" alt="Campera de hombre">
+                
+                <p class="info">Product info: Campera de Hombre</p>
                 <p>Precio: $1890</p>
                 <a class="eliminar-button" href="">Eliminar</a>
                 <p><input type="number" value="1"> </p>
 
             </div>
 
-            <div class="infoproducto3">
-                <img class="imgprod3" src="img/pant-mujer.jpeg" alt="Pant Mujer">
-                <p>Product Info: Pant Mujer</p>
+            <div class="infoproducto">
+                <img class="img" src="img/pant-mujer.jpeg" alt="Pant Mujer">
+               
+                <p class="info">Product Info: Pant Mujer</p>
                 <p>Precio: $1200</p>
                 <a class="eliminar-button" href="">Eliminar</a>
                 <p><input type="number" value="1"> </p>
