cambio de los buttons y h3 de los precios

--- a/cart.html
+++ b/cart.html
@@ -42,6 +42,7 @@
         <div class="productos2">
             <div class="infoproducto">
                 <img class="img" src="img/buzo-mujer-final-dos.png" alt="Buzo de mujer">
+                <p>Buzo bakery shop</p>
                 <p class="info">Product Info: Buzo de Tela importada de Italia</p>
                 <p>Precio: $1000</p>
                 <a class="eliminar-button" href="">Eliminar</a>
