--- a/index.html
+++ b/index.html
@@ -39,14 +39,10 @@
                 <article class="producto">
                     <h3>Buzo</h3>
                     <img src="./img/buzo-mujer-final.png" alt="Buzo de mujer">
-                    <p>Buzo de lana para mujer</p>
-                    <p>$100.000</p>
-                    <a href="./cart.html">
-                        <button type="submit" class="button"> Agregar al Carrito</button>
-                    </a><br>
-                    <a href="./producto.html">
-                        <button type="submit" class="button-ver"> Ver mas</button>
-                    </a>
+                    <p>Buzo bakery shop</p>
+                    <h3>$100.000</h3>
+                    <a href="./cart.html" class="button"> Agregar al Carrito</a><br>
+                    <a href="./producto.html" class="button"> Ver mas</a>
                 </article>
 
 
@@ -55,13 +51,9 @@
                     <h3>Pollera</h3>
                     <img src="./img/pollera-mujer.jpeg" alt="Pollera de mujer">
                     <p>Pollera de mujer super comoda</p>
-                    <p>$1111</p>
-                    <a href="./cart.html">
-                        <button type="submit" class="button"> Agregar al Carrito</button>
-                    </a><br>
-                    <a href="./producto.html">
-                        <button type="submit" class="button-ver"> Ver mas</button>
-                    </a>
+                    <h3>$1111</h3>
+                    <a href="./cart.html" class="button"> Agregar al carrito</a><br>
+                    <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
 
@@ -69,14 +61,9 @@
                     <h3>Pantalon</h3>
                     <img src="./img/pant-mujer.jpeg" alt="Pantalon de mujer">
                     <p>Pantalon para mujer super canchero</p>
-                    <p>$1200</p>
-                    <a href="./cart.html">
-                        <button type="submit" class="button"> Agregar al Carrito</button>
-                    </a><br>
-
-                    <a href="./producto.html">
-                        <button type="submit" class="button-ver"> Ver mas</button>
-                    </a>
+                    <h3>$1200</h3>
+                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
 
@@ -84,26 +71,18 @@
                     <h3> Sandalias </h3>
                     <img src="./img/sandalias-mujer.jpeg" alt="Sandalias de mujer">
                     <p>Sandalias para mujer</p>
-                    <p>$1300</p>
-                    <a href="./cart.html">
-                        <button type="submit" class="button"> Agregar al Carrito</button>
-                    </a><br>
-                    <a href="./producto.html">
-                        <button type="submit" class="button-ver"> Ver mas</button>
-                    </a>
+                    <h3>$1300</h3>
+                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
                 <article class="producto">
                     <h3>Top</h3>
                     <img src="./img/top-mujer.jpeg" alt="Top de mujer">
                     <p>Top mangas largas para mujer</p>
-                    <p>$1400</p>
-                    <a href="./cart.html">
-                        <button type="submit" class="button"> Agregar al Carrito</button>
-                    </a><br>
-                    <a href="./producto.html">
-                        <button type="submit" class="button-ver"> Ver mas</button>
-                    </a>
+                    <h3>$1400</h3>
+                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
                 <section class="articulos-padre">
@@ -113,13 +92,9 @@
                             <h3>Camisa</h3>
                             <img src="./img/camisa-hombre.jpeg" alt="Camisa de hombre">
                             <p>Camisa para hombre</p>
-                            <p>$1500</p>
-                            <a href="./cart.html">
-                                <button type="submit" class="button"> Agregar al Carrito</button>
-                            </a><br>
-                            <a href="./producto.html">
-                                <button type="submit" class="button-ver"> Ver mas</button>
-                            </a>
+                            <h3>$1500</h3>
+                            <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                            <a href="./producto.html" class="button-ver">Ver mas</a>
                         </article>
 
 
@@ -128,26 +103,18 @@
                             <h3>Campera</h3>
                             <img src="./img/campera-hombre.jpeg" alt="Campera de hombre">
                             <p>Campera para hombre</p>
-                            <p>$1890</p>
-                            <a href="./cart.html">
-                                <button type="submit" class="button"> Agregar al Carrito</button>
-                            </a><br>
-                            <a href="./producto.html">
-                                <button type="submit" class="button-ver"> Ver mas</button>
-                            </a>
+                            <h3>$1890</h3>
+                            <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                            <a href="./producto.html" class="button-ver">Ver mas</a>
                         </article>
 
                         <article class="producto">
                             <h3>Pantalon</h3>
                             <img src="./img/pant-hombre.jpeg" alt="Pantalon de hombre">
                             <p>Pantalon para hombre</p>
-                            <p>$1400</p>
-                            <a href="./cart.html">
-                                <button type="submit" class="button"> Agregar al Carrito</button>
-                            </a><br>
-                            <a href="./producto.html">
-                                <button type="submit" class="button-ver"> Ver mas</button>
-                            </a>
+                            <h3>$1400</h3>
+                            <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                            <a href="./producto.html" class="button-ver">Ver mas</a>
                         </article>
 
 
@@ -155,13 +122,9 @@
                             <h3>Buzo</h3>
                             <img src="./img/buzo-hombre.jpeg" alt=" buzo de hombre">
                             <p>Buzo para hombre</p>
-                            <p>$1700</p>
-                            <a href="./cart.html">
-                                <button type="submit" class="button"> Agregar al Carrito</button>
-                            </a><br>
-                            <a href="./producto.html">
-                                <button type="submit" class="button-ver"> Ver mas</button>
-                            </a>
+                            <h3>$1700</h3>
+                            <a href="./cart.html" class="button">Agregar al carrito </a><br>
+                            <a href="./producto.html" class="button-ver">Agregar al carrito</a>
                         </article>
 
 
@@ -169,13 +132,9 @@
                             <h3>Zapatillas</h3>
                             <img src="./img/zapas-hombres.jpeg" alt="zapatillas de hombre">
                             <p>zapatillas para hombre</p>
-                            <p>$2000</p>
-                            <a href="./cart.html">
-                                <button type="submit" class="button"> Agregar al Carrito</button>
-                            </a><br>
-                            <a href="./producto.html">
-                                <button type="submit" class="button-ver"> Ver mas</button>
-                            </a>
+                            <h3>$2000</h3>
+                            <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                            <a href="./producto.html" class="button-ver">Ver mas</a>
                         </article>
 
 
@@ -186,13 +145,9 @@
                                     <h3>Gorra</h3>
                                     <img src="./img/gorra.jpeg" alt="gorra">
                                     <p>Gorra unisex</p>
-                                    <p>$799</p>
-                                    <a href="./cart.html">
-                                        <button type="submit" class="button"> Agregar al Carrito</button>
-                                    </a><br>
-                                    <a href="./producto.html">
-                                        <button type="submit" class="button-ver"> Ver mas</button>
-                                    </a>
+                                    <h3>$799</h3>
+                                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                                    <a href="./producto.html" class="button-ver">Ver mas</a>
                                 </article>
 
 
@@ -200,13 +155,9 @@
                                     <h3>Reloj</h3>
                                     <img src="./img/reloj.jpeg" alt="reloj">
                                     <p>Reloj con malla color negra</p>
-                                    <p>$2000</p>
-                                    <a href="./cart.html">
-                                        <button type="submit" class="button"> Agregar al Carrito</button>
-                                    </a><br>
-                                    <a href="./producto.html">
-                                        <button type="submit" class="button-ver"> Ver mas</button>
-                                    </a>
+                                    <h3>$2000</h3>
+                                    <a href="./cart.html" class="button">Agregar al carrito </a><br>
+                                    <a href="./producto.html" class="button-ver">Ver mas</a>
                                 </article>
 
 
@@ -214,13 +165,9 @@
                                     <h3>Cartera</h3>
                                     <img src="./img/accesorio-cartera.jpeg" alt="Cartera de mujer">
                                     <p> Cartera de cuero para mujer</p>
-                                    <p>$989</p>
-                                    <a href="./cart.html">
-                                        <button type="submit" class="button"> Agregar al Carrito</button>
-                                    </a><br>
-                                    <a href="./producto.html">
-                                        <button type="submit" class="button-ver"> Ver mas</button>
-                                    </a>
+                                    <h3>$989</h3>
+                                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                                    <a href="./producto.html" class="button-ver">Ver mas</a>
                                 </article>
 
 
@@ -228,13 +175,9 @@
                                     <h3>Pulsera</h3>
                                     <img src="./img/pulsera-accesorio.jpeg" alt="pulsera">
                                     <p>Pulsera de cuero con dije</p>
-                                    <p>$780</p>
-                                    <a href="./cart.html">
-                                        <button type="submit" class="button"> Agregar al Carrito</button>
-                                    </a><br>
-                                    <a href="./producto.html">
-                                        <button type="submit" class="button-ver"> Ver mas</button>
-                                    </a>
+                                    <h3>$780</h3>
+                                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                                    <a href="./producto.html" class="button-ver">Ver mas</a>
                                 </article>
 
 
@@ -242,13 +185,9 @@
                                     <h3>Anteojos</h3>
                                     <img src="./img/anteojos-accesorios.jpeg" alt="anteojos">
                                     <p>Anteojos de forma rectangular con patitas reforzadas</p>
-                                    <p>$659</p>
-                                    <a href="./cart.html">
-                                        <button type="submit" class="button"> Agregar al Carrito</button>
-                                    </a><br>
-                                    <a href="./producto.html">
-                                        <button type="submit" class="button-ver"> Ver mas</button>
-                                    </a>
+                                    <h3>$659</h3>
+                                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                                    <a href="./producto.html" class="button-ver">Ver mas</a>
                                 </article>
 
 
