--- a/category.html
+++ b/category.html
@@ -40,7 +40,7 @@
             <article class="producto">
                 <h3 class="titulo-producto">Buzo</h3>
                 <a href="./productDetail.html"><img src="./img/buzo-mujer-final.png" alt="Buzo de mujer"></a>
-                <p>Buzo bakery</p>
+                <p>Buzo bakery shop</p>
                 <h3>$100.000</h3>
             </article>
 
