Cambios en el producto, agregamos cajas en las img

--- a/cart.html
+++ b/cart.html
@@ -38,32 +38,32 @@
     <h1 class="h2">Shopping Cart</h1>
 
 
-    <section class="compras">
-        <div class="productos2">
-            <div class="infoproducto">
-                <img class="img" src="img/buzo-mujer-final-dos.png" alt="Buzo de mujer">
+    <section class="articulos-padre">
+        <div class="home-sections">
+            <div class="producto">
+                <img src="img/buzo-mujer-final-dos.png" alt="Buzo de mujer">
                 <p>Buzo bakery shop</p>
-                <p class="info">Product Info: Buzo de Tela importada de Italia</p>
+                <p>Product Info: Buzo de Tela importada de Italia</p>
                 <p>Precio: $1000</p>
                 <a class="eliminar-button" href="">Eliminar</a>
                 <p><input type="number" value="1"> </p>
 
             </div>
 
-            <div class="infoproducto">
-                <img class="img" src="img/campera-hombre.jpeg" alt="Campera de hombre">
+            <div class="producto">
+                <img src="img/campera-hombre.jpeg" alt="Campera de hombre">
                 
-                <p class="info">Product info: Campera de Hombre</p>
+                <p>Product info: Campera de Hombre</p>
                 <p>Precio: $1890</p>
                 <a class="eliminar-button" href="">Eliminar</a>
                 <p><input type="number" value="1"> </p>
 
             </div>
 
-            <div class="infoproducto">
-                <img class="img" src="img/pant-mujer.jpeg" alt="Pant Mujer">
+            <div class="producto">
+                <img src="img/pant-mujer.jpeg" alt="Pant Mujer">
                
-                <p class="info">Product Info: Pant Mujer</p>
+                <p >Product Info: Pant Mujer</p>
                 <p>Precio: $1200</p>
                 <a class="eliminar-button" href="">Eliminar</a>
                 <p><input type="number" value="1"> </p>
